syntax = "proto3";
package virtengine.fraud.v1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/fraud/v1";

// Params defines the parameters for the fraud module
message Params {
  option (gogoproto.equal) = true;
  option (amino.name) = "fraud/Params";

  // MinDescriptionLength is the minimum description length
  int32 min_description_length = 1 [
    (gogoproto.jsontag) = "min_description_length",
    (gogoproto.moretags) = "yaml:\"min_description_length\""
  ];

  // MaxDescriptionLength is the maximum description length
  int32 max_description_length = 2 [
    (gogoproto.jsontag) = "max_description_length",
    (gogoproto.moretags) = "yaml:\"max_description_length\""
  ];

  // MaxEvidenceCount is the maximum number of evidence items per report
  int32 max_evidence_count = 3 [
    (gogoproto.jsontag) = "max_evidence_count",
    (gogoproto.moretags) = "yaml:\"max_evidence_count\""
  ];

  // MaxEvidenceSizeBytes is the maximum size per evidence item
  int64 max_evidence_size_bytes = 4 [
    (gogoproto.jsontag) = "max_evidence_size_bytes",
    (gogoproto.moretags) = "yaml:\"max_evidence_size_bytes\""
  ];

  // AutoAssignEnabled enables automatic moderator assignment
  bool auto_assign_enabled = 5 [
    (gogoproto.jsontag) = "auto_assign_enabled",
    (gogoproto.moretags) = "yaml:\"auto_assign_enabled\""
  ];

  // EscalationThresholdDays is days before auto-escalation
  int32 escalation_threshold_days = 6 [
    (gogoproto.jsontag) = "escalation_threshold_days",
    (gogoproto.moretags) = "yaml:\"escalation_threshold_days\""
  ];

  // ReportRetentionDays is how long to retain resolved reports
  int32 report_retention_days = 7 [
    (gogoproto.jsontag) = "report_retention_days",
    (gogoproto.moretags) = "yaml:\"report_retention_days\""
  ];

  // AuditLogRetentionDays is how long to retain audit logs
  int32 audit_log_retention_days = 8 [
    (gogoproto.jsontag) = "audit_log_retention_days",
    (gogoproto.moretags) = "yaml:\"audit_log_retention_days\""
  ];
}
